@@ -1,5 +1,15 @@
 2014-08-31  Corinna Vinschen  <corinna@vinschen.de>
 
+	* uinfo.cc (cygheap_pwdgrp::init): Fix comment.  Rearrange code for
+	style.
+	(cygheap_pwdgrp::nss_init_line): Disable db_prefix and db_separator
+	settings.  Add comment.
+	(pwdgrp::fetch_account_from_windows): Drop outdated comment.  Fix code
+	fetching primary group gid of group setting in SAM description field.
+	Change comment accordingly.
+
+2014-08-31  Corinna Vinschen  <corinna@vinschen.de>
+
 	* uinfo.cc (pwdgrp::fetch_account_from_windows): Disallow creating an
 	entry for "NULL SID".
 
